2001-05-28  Michael Livshin  <mlivshin@bigfoot.com>

	* check-guile.in: fix to be runnable when srcdir!=builddir.

2001-05-26  Michael Livshin  <mlivshin@bigfoot.com>

	revert the controversial part of the 2001-05-23 changes

2001-05-23  Michael Livshin  <mlivshin@bigfoot.com>

	* configure.in: configury for SCM_[U]BITS_T, some more sizeofs.
	also, make sure that the integral type choosen to represent an SCM
	has exactly the same size as a void pointer.

	* acconfig.h: add undefs for SCM_BITS_T, SCM_UBITS_T,
	SCM_SIZEOF_BITS_T, ptrdiff_t.

2001-05-16  Rob Browning  <rlb@cs.utexas.edu>

	* configure.in: add AC_SUBST for GUILE_MICRO_VERSION.

	* GUILE-VERSION
	(GUILE_VERSION): now MAJOR.MINOR.MICRO
	(GUILE_MICRO_VERSION): new variable, records final revision.
	i.e. the 5 in 1.6.5.  MINOR_VERSION is now just the middle number,
	i.e. the 6.

2001-05-16  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* acconfig.h, configure.in:  Renamed
	GUILE_WARN_DEPRECATED_DEFAULT to SCM_WARN_DEPRECATED_DEFAULT.

2001-05-15  Marius Vollmer  <mvo@zagadka.ping.de>

	* acinclude.m4: Removed copy of "libtool.m4".

2001-05-14  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* configure.in (SCM_DEBUG_DEPRECATED):  Always defined.

2001-05-13  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* AUTHORS (Martin Grabmueller, Thien-Thi Nguyen): Update.

	* HACKING: Update copyright.
	Add blurb pointing to devel/tasks.text.

2001-05-11  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* check-guile.in: For SRFI testing, set and export env
	var `LTDL_LIBRARY_PATH'.

2001-05-07  Neil Jerram  <neil@ossau.uklinux.net>

	* AUTHORS: Add docs-related authorship details.

2001-05-05  Marius Vollmer  <mvo@zagadka.ping.de>

	* configure.in (--enable-deprecated): Recognize "shutup" option
	argument and turn it into the default warning level "no".

2001-05-05  Gary Houston  <ghouston@arglist.com>

	* acconfig.h: add HAVE_IPV6.
	* configure.in: check whether we can compile with IPv6 support.
